syntax = "proto3";

package io.mmtx.protocol.protobuf;

import "abstractGlobalEndResponse.proto";

option java_multiple_files = true;
option java_outer_classname = "GlobalCommitResponse";
option java_package = "io.mmtx.codec.protobuf.generated";

message GlobalCommitResponseProto {
    AbstractGlobalEndResponseProto abstractGlobalEndResponse =1;
}