syntax = "proto3";

package io.mmtx.protocol.protobuf;

option java_multiple_files = true;
option java_outer_classname = "ResultCode";
option java_package = "io.mmtx.codec.protobuf.generated";

// PublishRequest is a publish request.
enum ResultCodeProto {

    Failed = 0;

    Success = 1;

}